# the-odds-api-client

./: .gitignore  .travis.yml  Makefile  README.md  api_key.env  pyproject.toml  requirements.txt
docs/: CNAME  api.html  api.md  index.html
src/theoddsapi/: api.py
tests/: test.py
