[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theoddsapi"
version = "1.1.0"
authors = [
  { name="MidpriceDog"},
]
description = "A Python wrapper around The Odds-Api V4"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "attr >= 0.3.2",
  "attrs >= 22.1.0",
  "brotli >= 1.0.9",
  "brotlicffi >= 1.0.9.2",
  "ConfigParser >= 5.3.0",
  "cryptography >= 39.0.1",
  "Cython >= 0.29.33",
  "diff >= 0.6.1",
  "dl >= 0.1.0",
  "docutils >= 0.17.1",
  "flake8 >= 6.0.0",
  "HTMLParser >= 0.0.2",
  "ipython >= 8.10.0",
  "ipywidgets >= 8.0.4",
  "Jinja2 >= 3.1.2",
  "jnius >= 1.1.0",
  "keyring >= 23.9.1",
  "lockfile >= 0.12.2",
  "mock >= 5.0.1",
  "multiprocess >= 0.70.14",
  "mypy_extensions >= 1.0.0",
  "numpy >= 1.23.2",
  "pandas >= 1.4.4",
  "Pillow >= 9.4.0",
  "pip_api >= 0.0.30",
  "pox >= 0.3.2",
  "protobuf >= 4.22.0",
  "pyenchant >= 3.2.2",
  "pylama >= 8.4.1",
  "pyOpenSSL >= 23.0.0",
  "pytest >= 7.2.1",
  "railroad >= 0.5.0",
  "read_env_keys >= 0.0.3",
  "requirementslib >= 2.2.3",
  "simplejson >= 3.18.3",
  "Sphinx >= 6.1.3",
  "sympy >= 1.11.1",
  "toml >= 0.10.2",
  "tornado >= 6.2",
  "trove_classifiers >= 2023.2.20",
  "truststore >= 0.5.0",
  "typed_ast >= 1.5.4",
  "urllib3_secure_extra >= 0.1.0",
  "xmlrpclib >= 1.0.1",
  "python-dotenv >= 0.21.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MidpriceDog/the-odds-api-client"
"Bug Tracker" = "https://github.com/MidpriceDog/the-odds-api-client/issues"