[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theoddsapi"
version = "1.3.5"
authors = [
  { name="MidpriceDog"},
]
description = "A Python wrapper around The Odds-Api V4"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MidpriceDog/the-odds-api-client"
"Bug Tracker" = "https://github.com/MidpriceDog/the-odds-api-client/issues"